Fix horizontal scroll bug

--- a/src/core/client/stream/tabs/Live/LiveChatContainer.css
+++ b/src/core/client/stream/tabs/Live/LiveChatContainer.css
@@ -1,5 +1,6 @@
 .streamContainer {
   overflow-y: scroll;
+  overflow-x: hidden;
 
   height: 500px;
 }
