--- a/src/core/client/stream/tabs/Live/LiveComment/LiveCommentContainer.css
+++ b/src/core/client/stream/tabs/Live/LiveComment/LiveCommentContainer.css
@@ -1,12 +1,20 @@
+.root {
+  width: 100%;
+}
+
 .comment {
   font-family: var(--font-family-primary);
   font-size: var(--font-size-2);
 
   margin-top: var(--spacing-1);
   margint-bottom: var(--spacing-1);
+
+  width: 100%;
 }
 
 .avatar {
+  flex-shrink: 0;
+
   width: 30px;
   height: 30px;
   background: grey;
@@ -16,10 +24,10 @@
 }
 
 .container {
-  width: calc(100% - 40px);
+  flex-grow: 1;
   background-color: var(--palette-grey-100);
 
-  padding: var(--spacing-1);
+  padding: var(--spacing-2);
   border-radius: 5px;
 }
 
